cmake_minimum_required(VERSION 3.24)
project(untitled1)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 main.cpp headers/EagleAviary.h classes_cpp/AmazonZoo.cpp headers/AmazonZoo.h classes_cpp/Animal.cpp classes_cpp/Chicken.cpp classes_cpp/ChickenCoop.cpp classes_cpp/Eagle.cpp classes_cpp/EagleAviary.cpp classes_cpp/Habitat.cpp classes_cpp/Tiger.cpp classes_cpp/TigerEnclosure.cpp classes_cpp/Zoo.cpp headers/Animal.h headers/Chicken.h headers/ChickenCoop.h headers/Eagle.h headers/Habitat.h headers/Tiger.h headers/TigerEnclosure.h headers/Zoo.h classes_cpp/Utils.cpp)
